website/translated_docs/ja/version-1.0.0/components/desktop/multichoice.md
---
id: version-1.0.0-multichoice
title: MultiChoice
sidebar_label: MultiChoice
original_id: multichoice
---

## Overview

MultiChoice は、複数選択肢の中から複数の値を選択することができます。 <iframe src="https://kuc-storybook.netlify.app/iframe.html?id=multichoice--document" title="multichoice image" height="130px" mark="crwd-mark"></iframe>

---

## Specification

### Property

使用できるプロパティの一覧です。プロパティを指定して値を更新することができます。

| Name         | Type            | Default | Description            | Remark                                       |
|:------------ |:--------------- |:------- |:---------------------- |:-------------------------------------------- |
| className    | string          | ""      | コンポーネントの class 名       |                                              |
| error        | string          | ""      | エラーに表示するテキスト           | 未指定、あるいは空文字の場合、error は表示されない                 |
| id           | string          | ""      | コンポーネントの id 名          |                                              |
| label        | string          | ""      | コンポーネントの説明ラベル          | 未指定、あるいは空文字の場合、label は表示されない                 |
| value        | string          | ""      | 選択されている値               | value が未指定の場合、何も更新されない                       |
| disabled     | boolean         | false   | コンポーネントの編集可/不可設定       |                                              |
| requiredIcon | boolean         | false   | コンポーネントの必須アイコン表示/非表示設定 |                                              |
| visible      | boolean         | true    | コンポーネントの表示/非表示設定       |                                              |
| items        | Array\<Item\> | []      | 表示する選択肢一覧              | items が配列以外の場合、エラーを出力する                      |
| Item.label   | string          | null    | 各選択肢のテキスト              | Item.label が未指定の場合、UI 上は Item.value の値が表示される |
| Item.value   | string          | null    | 各選択肢の値                 | Item.value の値が重複した場合、エラーを出力する                |

### Event
指定できるイベントの一覧です。

| Name   | Type     | Description       | Remark                                                                                                                                                                   |
|:------ |:-------- |:----------------- |:------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| change | function | 値が変更された時のイベントハンドラ | 引数には Event の event オブジェクトをとる<br><br>event.detail で以下の値を受け取ることができる<br>event.detail.oldValue : 変更前の value の値<br>event.detail.value : 変更後の value の値 |

### Constructor

MultiChoice(options) 使用できるコンストラクタの一覧です。

#### Parameter

| Name    | Type   | Default | Description                  | Remark         |
|:------- |:------ |:------- |:---------------------------- |:-------------- |
| options | object | {}      | コンポーネントのプロパティを含む JSON オブジェクト | options 内の値は任意 |

---
## Sample Code

全てのパラメータを指定した場合のサンプルコードです。

```javascript
const space = kintone.app.record.getSpaceElement('space');
const multiChoice = new Kuc.MultiChoice({
  label: 'Fruit',
  requiredIcon: true,
  items: [
    {
      label: 'orange',
      value: 'Orange'
    },
    {
      label: 'apple',
      value: 'Apple'
    }
  ],
  value : ['Orange'],
  error: 'Error occurred!',
  className: 'options-class',
  id: 'options-id',
  visible: true,
  disabled: false
});
space.appendChild(multiChoice);

multiChoice.addEventListener('change', event => {
  console.log(event);
});
```
